# qqman

./: .gitignore  pyproject.toml
qqman/: __init__.py  qqman.py
