[tool.poetry]
name = "python-qqman"
version = "0.1.0"
description = "Package to draw Manhattan plots and QQ plots"
authors = ["jtb324 <james.baker@vanderbilt.edu>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
pandas = "^1.4.2"
numpy = "^1.22.4"
matplotlib = "3.5.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.14.1"
scipy = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
